# FHCrypto

./: .gitignore  CMakeLists.txt  main.cpp  vcpkg.json
.cache/clangd/index/: 28147-89.h.8E36CA388B4CF3AD.idx  CFB.h.3F0AA219BDDD816A.idx  CFB.h.C65349B967AAAA6D.idx  CTR.h.9FC87EB8CF338028.idx  ECB.h.F00C2F0BA0EC8ABF.idx  big_rand.h.71EC349BCA1E8780.idx  constants.h.B187917B07C52A39.idx  consts.h.7EB6245CE32EEAA0.idx  consts.h.AC7CE0F1AB99266B.idx  core.cpp.B5D1B40E36D8B3AA.idx  core.h.23976CBA730DE54C.idx  core.h.8750253F576B53A1.idx  file.h.A6F8F3207469477B.idx  gamming_with_reversal_connection.cpp.2FA40A6F5A46B6DB.idx  gamming_with_reversal_connection.h.7CCD59B57806F7CA.idx  main.cpp.1153AA3DA385BE83.idx  main.cpp.26D15C8643FB6E94.idx  main.cpp.2C6C68F8B69A2659.idx  main.cpp.411C60C459453082.idx  main.cpp.447B82AE338759C3.idx  main.cpp.7E76E616253B6915.idx  main.cpp.C37F27E2FDF205D2.idx  main.cpp.C84AA19B67C64071.idx  main.cpp.CD4398C094EF6C6E.idx  main.cpp.DCA42BE9F55FAF7E.idx  main.h.1885094D904E4FE1.idx  main.h.90E9CBE9A4427A0C.idx  main.h.97A1582EAB02D301.idx  main.h.E5BA5D34F675BB3D.idx  main.h.EFA11DD77C19A440.idx  simple_exchange.cpp.3020A8E2BEFDA3EB.idx  simple_exchange.h.5B697548D2B0584F.idx  test.cpp.26AE37D81D12746A.idx  test.cpp.3467F5508D94C0DA.idx  test.cpp.46CA39215BD24FCD.idx  test.cpp.55C17D703ED0EFBE.idx  test.cpp.62972B6A9BB67AFA.idx  test.cpp.7E6BE29A4A829092.idx  test.cpp.7EDA8449F9A1810E.idx  test.cpp.8345B4AC7362EFB0.idx  (+4 more)
28147-89-CFB-mode/: 28147-89.h  CFB.h  ECB.h  consts.h  decrypted.txt  encrypted.txt  file.h  main.cpp  test.cpp  text.txt
31-11/: CMakeLists.txt  consts.h  core.h  input.txt  main.cpp  main.py  numbers_sums.h  output.txt  test.cpp  translations.h
34-10/: CMakeLists.txt  GenPubKey.h  message  run.sh  sign.cpp  verify.cpp
EC-ELGamal/: elgamal_ecc.c
Images/: CMakeLists.txt
Images/include/: discrete_cosine_transform.hpp  exceptions.hpp  optparse.hpp  steganography.hpp
Images/src/: discrete_cosine_transform.cpp  main.cpp  steganography.cpp
Lab1/Test1/: main.cpp  main.h  test.cpp
Lab1/Test2/: main.cpp  main.h  test.cpp
Lab1/Test3/: main.cpp  main.h  test.cpp
Lab1/Test4/: main.cpp  main.h  test.cpp
Lab1/Test5/: main.cpp  main.h  test.cpp
Lab1/Test6/: main.cpp  main.h
MD5/: input.txt  main.cpp  md5.cpp  md5.h  md5_loc.h
STB-34-101-31/: CFB.h  CTR.h  ECB.h  consts.h  core.h  main.cpp  test.cpp  test.txt
STB-34-101-31/LR2/: Отчёт.docx
rabin/: a.out  big_rand.h  consts.h  core.h  decrypted.txt  encrypted.txt  main.cpp  text.txt  utils.h
utils/: file.h  test.cpp
